# Intelligent-Office-Assistant

./: .gitignore  DEPLOYMENT.md  README.md  README_CN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dist_new/: index.html
dist_new/assets/: index-619yuLSL.css  index-iO6rad8q.js
docs/: DEPLOY_CHROMA.md
sql/: README.md  migrate_postgres_to_rbac.sql  schema_postgres.sql  schema_sqlite.sql
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: pdf_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat_proxy.rs  conversation.rs  knowledge.rs  knowledge_search.rs  mod.rs  settings.rs  skill.rs  users.rs
src-tauri/src/db/: conversation.rs  knowledge.rs  mod.rs  remote_db.rs  skill.rs
src-tauri/src/llm/: chroma_adapter.rs  client.rs  mod.rs
src/components/: ChatInput.tsx  ChatView.tsx  KnowledgeList.tsx  MessageList.tsx  SettingsView.tsx  SkillEditor.tsx  Titlebar.tsx
src/stores/: chatStore.ts  knowledgeStore.ts  settingsStore.ts  skillStore.ts
src/stores/chat/: draftStore.ts  streamEvents.ts  types.ts  utils.ts
src/styles/: globals.css
