[package]
name = "chroma-version"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
lopdf = "0.41"
regex = "1"
base64 = "0.22"
pdf-extract = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "chroma_version_lib"
crate-type = ["lib", "staticlib"]
